# approxcdf

./: .gitignore  CMakeLists.txt  DESCRIPTION  LICENSE  MANIFEST.in  NAMESPACE  README.md  approxcdf.pc.in  requirements.txt  setup.py
R/: approxcdf.R
approxcdf/: __init__.py  cpp_wrapper.pyx
c_example/: c_example.c
docs/source/: conf.py  index.rst
include/: approxcdf.h
inst/: COPYRIGHTS
man/: pbvn.Rd  pmvn.Rd  pqvn.Rd
src/: Makevars  Rwrapper.cpp  approxcdf-win.def  approxcdf.h  bhat.cpp  bhat_lowdim.cpp  c_wrapper.cpp  cblas.h  constants.h  drezner.cpp  gauss_legendre.h  genz.cpp  gge.cpp  helpers.h  ldl.cpp  other.cpp  plackett.cpp  preprocess_rho.cpp  stdnorm.cpp  tvbs.cpp
tests/: testthat.R
tests/testthat/: bhat.R  drezner.R  ldl.R  linalg.R  plackett.R  stdnorm.R  tsay.R  tvbs.R  tvpack.R
